just been playing around. no major changes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 Whether you are working from home for the first time.</p>
             <button class="main-button">Learn more</button>
         </section>
-        <section>
+        <section id="img">
             <img src="images/yoga.png" alt="woman doing yoga">
         </section>
     </main>
